# feup-aed-proj1

./: README.md
code/projeto-1/: CMakeLists.txt  Class.cpp  Class.h  Lecture.cpp  Lecture.h  README.md  Student.cpp  Student.h  UC.cpp  UC.h  classes_per_uc.csv  consult_functions.cpp  consult_functions.h  data_parsing.cpp  data_parsing.h  main.cpp  requests_functions.cpp  requests_functions.h  schedule
code/projeto-1/schedule.dSYM/Contents/Resources/DWARF/: schedule
documentation/: Doxyfile
documentation/html/: _class_8cpp.html  _class_8h.html  _class_8h_source.html  _lecture_8cpp.html  _lecture_8h.html  _lecture_8h_source.html  _r_e_a_d_m_e_8md.html  _student_8cpp.html  _student_8h.html  _student_8h_source.html  _u_c_8cpp.html  _u_c_8h.html  _u_c_8h_source.html  annotated.html  class_class-members.html  class_class.html  class_lecture-members.html  class_lecture.html  class_student-members.html  class_student.html  class_u_c-members.html  class_u_c.html  classes.html  consult__functions_8cpp.html  consult__functions_8h.html  consult__functions_8h_source.html  data__parsing_8cpp.html  data__parsing_8h.html  data__parsing_8h_source.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_c8e615cb00c05bfb04d50c6f7192e0ea.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  md_code_2projeto-1_2_r_e_a_d_m_e.html  (+7 more)
documentation/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_4.js  (+20 more)
